switched to csv data source

--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
     box-sizing: border-box;
 }
 .row {
-    overflow: auto;
+    overflow: hidden;
     /*border: 1px solid rebeccapurple;*/
 }
 .column {
@@ -39,7 +39,7 @@ body {
     background-color: sandybrown;
 }
 .content {
-    display: -webkit-box || -webkit-inline-box;
+    /*display: -webkit-box || -webkit-inline-box;
     display: -moz-box || -moz-inline-box;
     display: -ms-flexbox || -ms-inline-flexbox;
     display: -webkit-flex || -webkit-inline-flex;
@@ -50,7 +50,7 @@ body {
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
-    align-items: flex-start;
+    align-items: flex-start;*/
     height: 405px;
 }
 .footer > .column {
@@ -61,16 +61,25 @@ body {
 
 /* ======= title ======= */
 h1 {
+    padding: 0;
+    margin: 0;
+    line-height: 70px;
     color: rebeccapurple;
+}
+h5 {
+    padding: 0;
+    margin: -10px 0;
+    line-height: 30px;
 }
 
 /* ======= map ======= */
 .mapArea {
-    float: left;
+    width: 680px;
+    height: 400px;
 }
 #map {
-    width: 720px;
-    height: 405px;
+    width: 100%;
+    height: 100%;
 }
 
 /* ======= profile ======= */
@@ -87,6 +96,7 @@ h1 {
     flex-direction: column;
     justify-content: left;
     align-items: flex-start;
+    margin-left: 10px;
     width: 280px;
 }
 .label {
@@ -94,13 +104,18 @@ h1 {
     font: 12px Arial, Helvetica, sans-serif;
     font-weight: bold;
     color: rebeccapurple;
-    width: 30%;
+    width: 15%;
 }
 .value {
     text-align: left;
     font: 12px Arial, Helvetica, sans-serif;
     color: black;
-    width: 70%;
+    width: 85%;
+}
+#chartHorizontal {
+    margin-right: 5px;
+    padding: 10px 0 0 0;
+    border: 1px solid Tomato;
 }
 
 /* ======= info ======= */
