new data files and switched to google maps

--- a/style.css
+++ b/style.css
@@ -113,10 +113,10 @@ h5 {
 #feeders {
     background-color: green;
 }
-#publicSchools {
+#public {
     background-color: blue;
 }
-#charterSchools {
+#charter {
     background-color: purple;
 }
 
