--- a/style.css
+++ b/style.css
@@ -39,19 +39,7 @@ body {
     background-color: sandybrown;
 }
 .content {
-    /*display: -webkit-box || -webkit-inline-box;
-    display: -moz-box || -moz-inline-box;
-    display: -ms-flexbox || -ms-inline-flexbox;
-    display: -webkit-flex || -webkit-inline-flex;
-    display: inline-flex;
-    flex-direction: -webkit-row;
-    justify-content: -webkit-flex-start;
-    align-items: -webkit-flex-start;
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    align-items: flex-start;*/
-    height: 405px;
+    height: 480px;
 }
 .footer > .column {
     height: 100px;
@@ -59,7 +47,7 @@ body {
     background-color: moccasin;
 }
 
-/* ======= title ======= */
+/* ======= titles ======= */
 h1 {
     padding: 0;
     margin: 0;
@@ -71,6 +59,16 @@ h5 {
     margin: -10px 0;
     line-height: 30px;
 }
+.title {
+    display: block;
+    margin: 0;
+    padding: 5px 0;
+    width: 100%;
+    height: 20px;
+    font: 16px Arial, Helvetica, sans-serif;
+    background: #aaa;
+}
+
 
 /* ======= map ======= */
 .mapArea {
@@ -90,35 +88,15 @@ h5 {
     background: rgba(255,255,255,0.8);
     box-shadow: 0 0 15px rgba(0,0,0,0.8);
     border-radius: 5px;
-}
-.info h4 {
     margin: 0 0 5px;
     color: #777;
 }
+.infoWindow {
+    line-height: 1.35;
+    overflow: hidden;
+    white-space: nowrap;
+}
 
-/* ======= filters ======= */
-.filters {
-    width: 100px;
-    height: 100%;
-}
-.filterDivs > div {
-    margin: 10px;
-    padding: 8px 0 0 0;
-    width: 80px;
-    height: 30px;
-}
-#wards {
-    background-color: red;
-}
-#feeders {
-    background-color: green;
-}
-#public {
-    background-color: blue;
-}
-#charter {
-    background-color: purple;
-}
 
 /* ======= profile ======= */
 .profile, .filters {
@@ -142,15 +120,6 @@ h5 {
 .profile {
     margin-left: 10px;
     width: 320px;
-}
-.title {
-    width: 50%;
-    padding-left: 10px;
-    font: 14px/16px Arial, Helvetica, sans-serif;
-    background: blue;
-    background: rgba(255,255,255,0.8);
-    box-shadow: 0 0 15px rgba(0,0,0,0.2);
-    border-radius: 5px;
 }
 .label {
     text-align: right;
@@ -184,6 +153,172 @@ h5 {
     opacity: 0.7;
 }
 
+/* ======= filters ======= */
+.filterCol {
+    width: 100px;
+    height: 100%;
+}
+
+/* ======= mainNav ======= */
+#mainNav {
+    width: 100%;
+    z-index: 9;
+}
+#mainNav > div {
+    float: left;
+    width: 100%;
+}
+#mainNav ul {
+	list-style: none;
+	position: relative;
+	float: left;
+    width: 100%;
+	margin: 0;
+	padding: 0;
+}
+#mainNav ul a {
+	text-decoration: none;
+    font-family: "HelveticaNeue","Helvetica Neue",Helvetica,Arial,sans-serif;
+	font-weight: 700;
+	font-size: 12px;
+    color: white;
+}
+#mainNav ul li {
+    position: relative;
+    display: block;
+    height: 20px;
+    width: 100%;
+    margin: 1px;
+    padding: 2px 0;
+    font-size: 12px;
+    background-color: gray;
+}
+#mainNav ul ul {
+	display: none;
+	position: absolute;
+	top: 0px;
+	left: 110px;
+	background: #fff;
+	padding: 0;
+}
+.over {
+	background: #f6f6f6;
+    color: red;
+}
+/*#mainNav ul li:hover {
+	background: #f6f6f6;
+}
+#mainNav ul li:hover > a {
+    color: red;
+}
+#mainNav ul li:hover > ul {
+	display: block;
+}*/
+
+#mainNav ul ul li {
+	float: none;
+	width: 160px;
+}
+#mainNav ul ul a {
+	line-height: 120%;
+	padding: 10px 15px;
+}
+#mainNav ul ul ul {
+	top: 0;
+	left: 100%;
+}
+
+/* ======= filter selections ======= */
+.category {
+    display: block;
+    padding-top: 5px;
+    width: 100%;
+    height: 20px;
+    font: 14px Arial, Helvetica, sans-serif;
+    background-color: yellow;
+}
+.filterEntry {
+    position: relative;
+    display: block;
+    top: -16px;
+	left: 110px;
+    height: 14px;
+    width: 200px;
+}
+#getDataButton {
+    position: relative;
+    display: block;
+    margin-top: 10px;
+    height: 20px;
+    width: 100px;
+}
+input[type=text] {
+    padding: 5px;
+    border: 2px solid #ccc;
+    -webkit-border-radius: 5px;
+    border-radius: 5px;
+}
+input[type=text]:hover {
+    border-color: #999;
+}
+input[type=button] {
+    padding: 2px 15px;
+    height: 20px;
+    font: 14px Arial, Helvetica, sans-serif;
+    cursor: pointer;
+    background: #aaa;
+    -webkit-border-radius: 5px;
+    border-radius: 5px;
+}
+
+/* ======= filters ======= */
+.filters {
+    width: 100px;
+    height: 100%;
+}
+.filterDivs > div {
+    margin: 10px;
+    padding: 8px 0 0 0;
+    width: 80px;
+    height: 30px;
+}
+#wards {
+    background-color: red;
+}
+#feeders {
+    background-color: green;
+}
+#public {
+    background-color: blue;
+}
+#charter {
+    background-color: purple;
+}
+
+
+
+/*#mainNav ul li.current-menu-item {
+	background: #ddd;
+}*/
+
+/*width: 100px;
+left: 100px;
+top: 200px;
+
+.filterDivs > div,
+
+#schoolsMenu {
+    left: 120px;
+    top: 200px;
+}
+#studentsMenu {
+    left: 420px;
+    top: 200px;
+}
+#geographyMenu {
+    left: 260px;
+    top: 300px;
+}*/
 
 /*display: -webkit-box | -webkit-inline-box;
 display: -moz-box | -moz-inline-box;
