--- a/style.css
+++ b/style.css
@@ -69,18 +69,28 @@ h5 {
     background: #aaa;
 }
 
+/* ======= displays ======= */
+.displayCol {
+    width: 100px;
+    height: 100%;
+}
+/*.filters {
+    margin-left: 5px;
+    width: 100px;
+}*/
+
 
 /* ======= map ======= */
-.mapArea {
-    width: 480px;
-    height: 480px;
+.mapCol {
+    width: 200px;
+    height: 200px;
 }
 #map {
     width: 100%;
     height: 100%;
 }
 
-/* ======= info ======= */
+/* ======= map info box ======= */
 .info {
     padding: 6px 8px;
     font: 14px/16px Arial, Helvetica, sans-serif;
@@ -97,9 +107,77 @@ h5 {
     white-space: nowrap;
 }
 
+/* ======= filterNav ======= */
+#filterNav {
+    float: left;
+    width: 100%;
+    z-index: 9;
+}
+.category {
+    display: block;
+    float: left;
+    margin-bottom: 5px;
+    padding-left: 5px;
+    width: 100%;
+    height: 40px;
+    vertical-align: middle;
+    font: 14px Arial, Helvetica, sans-serif;
+    text-align: left;
+    background-color: #eee;
+}
+.label {
+    float: left;
+    margin-top: 12px;
+    text-align: right;
+    font: 12px Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    color: rebeccapurple;
+    width: 15%;
+}
+#filterNav > div {
+    float: left;
+}
+#filterNav ul {
+	list-style: none;
+	position: relative;
+    display: inline-block;
+    margin-top: 5px;
+    margin-left: 10px;
+	padding: 0;
+}
+#filterNav ul li {
+    position: relative;
+    display: inline-block;
+    float: left;
+    height: 20px;
+    margin: 1px;
+    padding: 2px 0;
+    font-size: 12px;
+    background-color: #ddd;
+    border: 2px solid #ccc;
+    -webkit-border-radius: 5px;
+    border-radius: 5px;
+}
+#filterNav ul li:hover {
+    background-color: #999;
+    border-color: #333;
+}
+
+#filterNav ul li a {
+    padding: 0 5px;
+    width: 100%;
+	text-decoration: none;
+    font-family: "HelveticaNeue","Helvetica Neue",Helvetica,Arial,sans-serif;
+	font-weight: 700;
+	font-size: 12px;
+    color: black;
+}
+.activeFilter {
+    padding: 5px;
+}
 
 /* ======= profile ======= */
-.profile, .filters {
+.profileCol {
     display: -webkit-box || -webkit-inline-box;
     display: -moz-box || -moz-inline-box;
     display: -ms-flexbox || -ms-inline-flexbox;
@@ -112,21 +190,7 @@ h5 {
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-}
-.filters {
-    margin-left: 5px;
-    width: 100px;
-}
-.profile {
-    margin-left: 10px;
-    width: 320px;
-}
-.label {
-    text-align: right;
-    font: 12px Arial, Helvetica, sans-serif;
-    font-weight: bold;
-    color: rebeccapurple;
-    width: 20%;
+    width: 70%;
 }
 .value {
     text-align: left;
@@ -140,6 +204,30 @@ h5 {
     border: 1px solid Tomato;
 }
 
+/* ======= displays ======= */
+.displays {
+    width: 100px;
+    height: 100%;
+}
+.displayDivs > div {
+    margin: 10px;
+    padding: 8px 0 0 0;
+    width: 80px;
+    height: 30px;
+}
+#wards {
+    background-color: red;
+}
+#feeders {
+    background-color: green;
+}
+#public {
+    background-color: blue;
+}
+#charter {
+    background-color: purple;
+}
+
 /* ======= legend ======= */
 .legend {
     line-height: 18px;
@@ -151,12 +239,6 @@ h5 {
     float: left;
     margin-right: 8px;
     opacity: 0.7;
-}
-
-/* ======= filters ======= */
-.filterCol {
-    width: 100px;
-    height: 100%;
 }
 
 /* ======= mainNav ======= */
@@ -229,14 +311,6 @@ h5 {
 }
 
 /* ======= filter selections ======= */
-.category {
-    display: block;
-    padding-top: 5px;
-    width: 100%;
-    height: 20px;
-    font: 14px Arial, Helvetica, sans-serif;
-    background-color: yellow;
-}
 .filterEntry {
     position: relative;
     display: block;
@@ -269,30 +343,6 @@ input[type=button] {
     background: #aaa;
     -webkit-border-radius: 5px;
     border-radius: 5px;
-}
-
-/* ======= filters ======= */
-.filters {
-    width: 100px;
-    height: 100%;
-}
-.filterDivs > div {
-    margin: 10px;
-    padding: 8px 0 0 0;
-    width: 80px;
-    height: 30px;
-}
-#wards {
-    background-color: red;
-}
-#feeders {
-    background-color: green;
-}
-#public {
-    background-color: blue;
-}
-#charter {
-    background-color: purple;
 }
 
 
