--- a/style.css
+++ b/style.css
@@ -34,8 +34,8 @@ body {
 
 /* ======= rows ======= */
 .header > .column {
-    height: 100px;
-    line-height: 100px;
+    height: 50px;
+    line-height: 50px;
     background-color: sandybrown;
 }
 .content {
@@ -119,7 +119,7 @@ h5 {
     margin-bottom: 5px;
     padding-left: 5px;
     width: 100%;
-    height: 40px;
+    height: 30px;
     vertical-align: middle;
     font: 14px Arial, Helvetica, sans-serif;
     text-align: left;
@@ -132,7 +132,16 @@ h5 {
     font: 12px Arial, Helvetica, sans-serif;
     font-weight: bold;
     color: rebeccapurple;
-    width: 15%;
+    width: 8%;
+}
+.filterText {
+    margin: 0 5px 0 5px;
+    width: 100%;
+	text-decoration: none;
+    font-family: "HelveticaNeue","Helvetica Neue",Helvetica,Arial,sans-serif;
+	font-weight: 700;
+	font-size: 12px;
+    color: black;
 }
 #filterNav > div {
     float: left;
@@ -149,7 +158,7 @@ h5 {
     position: relative;
     display: inline-block;
     float: left;
-    height: 20px;
+    height: 16px;
     margin: 1px;
     padding: 2px 0;
     font-size: 12px;
@@ -163,15 +172,15 @@ h5 {
     border-color: #333;
 }
 
-#filterNav ul li a {
-    padding: 0 5px;
+/*#filterNav ul li a {
+    margin: 16px 5px 0 5px;
     width: 100%;
 	text-decoration: none;
     font-family: "HelveticaNeue","Helvetica Neue",Helvetica,Arial,sans-serif;
 	font-weight: 700;
 	font-size: 12px;
     color: black;
-}
+}*/
 .activeFilter {
     padding: 5px;
 }
@@ -190,7 +199,7 @@ h5 {
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-    width: 70%;
+    width: 80%;
 }
 .value {
     text-align: left;
