locating school within geometry not working yet

--- a/style.css
+++ b/style.css
@@ -175,6 +175,11 @@ h5 {
     background-color: #aaa;
     border: 2px solid gray;
 }
+#filterNav ul #getData {
+    margin-left: 300px;
+    background-color: white;
+    border: 2px solid red;
+}
 
 /*#filterNav ul li a {
     margin: 16px 5px 0 5px;
