--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ body {
     background-color: sandybrown;
 }
 .content {
-    height: 480px;
+    /*height: 480px;*/
 }
 .footer > .column {
     height: 100px;
@@ -169,7 +169,7 @@ h5 {
 }
 #filterNav ul li:hover {
     background-color: #999;
-    border: 2px solid #333;
+    border: 2px solid red;
 }
 #filterNav ul li:last-of-type {
     background-color: #aaa;
@@ -179,6 +179,9 @@ h5 {
     margin-left: 300px;
     background-color: white;
     border: 2px solid red;
+}
+#filterNav ul #Elem {
+    margin-left: 30px;
 }
 
 /*#filterNav ul li a {
@@ -217,7 +220,7 @@ h5 {
     width: 80%;
 }
 #chartData {
-    width: 90%;
+    width: 100%;
     padding: 10px 0 0 0;
     border: 1px solid Tomato;
 }
