--- a/style.css
+++ b/style.css
@@ -1,272 +1,260 @@
 
 /* ======= general ======= */
 body {
-  font-family:"Ariel", sans-serif;
+    /*font-family:"Ariel", sans-serif;*/
+    font-family: "HelveticaNeue","Helvetica Neue",Helvetica,Arial,sans-serif;
+}
+hr {
+  margin-top: 40px;
+  margin-bottom: 40px;
 }
 
-/* ======= rows & columns ======= */
+/* ======= rows columns ======= */
 .row, .column {
     box-sizing: border-box;
 }
 .row {
-    overflow: hidden;
+    overflow: visible;
     /*border: 1px solid rebeccapurple;*/
 }
 .column {
     float: left;
-    text-align: center;
     /*border: 1px solid Tomato;*/
+}
+.column:before {
+    content: "\00a0";
 }
 
 /* ======= columns ======= */
-.column-1 { width: 8.333%; }
-.column-2 { width: 16.66%; }
-.column-3 { width: 25%; }
-.column-4 { width: 33.33%; }
-.column-5 { width: 41.66%; }
-.column-6 { width: 50%; }
-.column-7 { width: 58.33%; }
-.column-8 { width: 66.66%; }
-.column-9 { width: 75%; }
-.column-10 { width: 83.33%; }
-.column-11 { width: 91.66%; }
-.column-12 { width: 100%; }
+.col-md-1 { width: 8.333%; }
+.col-md-2 { width: 16.66%; }
+.col-md-3 { width: 25%; }
+.col-md-4 { width: 33.33%; }
+.col-md-5 { width: 41.66%; }
+.col-md-6 { width: 50%; }
+.col-md-7 { width: 58.33%; }
+.col-md-8 { width: 66.66%; }
+.col-md-9 { width: 75%; }
+.col-md-10 { width: 83.33%; }
+.col-md-11 { width: 91.66%; }
+.col-md-12 { width: 100%; }
 
-/* ======= rows ======= */
-.header > .column {
-    height: 50px;
-    line-height: 50px;
-    background-color: sandybrown;
-}
-.content {
-    /*height: 480px;*/
-}
-.footer > .column {
-    height: 100px;
-    line-height: 100px;
-    background-color: moccasin;
+
+[class*="col-"] {
+    background-color: #fff;
+    /*border: 1px solid #ddd;
+    border: 1px solid rgba(86,61,124,.2);*/
 }
 
-/* ======= titles ======= */
-h1 {
-    padding: 0;
-    margin: 0;
-    line-height: 70px;
-    color: rebeccapurple;
+/* ======= mapCol ======= */
+.mapCol {
+    display: -webkit-flex || -webkit-inline-flex;
+    display: -webkit-box || -webkit-inline-box;
+    display: -ms-flexbox || -ms-inline-flexbox;
+    display: -moz-box || -moz-inline-box;
+    display: inline-flex;
+    display: flex;
+    flex-direction: -webkit-column;
+    flex-direction: column;
+    justify-content: -webkit-center;
+    justify-content: center;
+    align-items: -webkit-center;
+    align-items: center;
 }
-h5 {
-    padding: 0;
-    margin: -10px 0;
-    line-height: 30px;
-}
-.title {
-    display: block;
-    margin: 0;
-    padding: 5px 0;
-    width: 100%;
-    height: 20px;
-    font: 16px Arial, Helvetica, sans-serif;
-    background: #aaa;
-}
-#message > p{
-    display: block;
-    margin-top: 5px;
-    padding: 5px 0;
-    width: 100%;
-    height: 20px;
-    font: 12px Arial, Helvetica, sans-serif;
-    background-color: sandybrown;
-}
-
-/* ======= displays ======= */
-.displayCol {
-    width: 100px;
-    height: 100%;
-}
-/*.filters {
-    margin-left: 5px;
-    width: 100px;
-}*/
-
 
 /* ======= map ======= */
-.mapCol {
-    width: 200px;
-    height: 200px;
-}
 #map {
+    /*margin-top: 5px;
+    margin-left: 100px;*/
     width: 100%;
-    height: 100%;
+    height: 700px;
+}
+/*#map2 {
+    margin-top: 20px;
+    width: 500px;
+    height: 500px;
+}*/
+
+/* ======= labels ======= */
+h3 {
+    margin: 10px;
+    color: darkslateblue;
+}
+.subtitle {
+    margin-left: 10px;
 }
 
-/* ======= map info box ======= */
-.info {
-    padding: 6px 8px;
-    font: 14px/16px Arial, Helvetica, sans-serif;
-    background: white;
-    background: rgba(255,255,255,0.8);
-    box-shadow: 0 0 15px rgba(0,0,0,0.8);
-    border-radius: 5px;
-    margin: 0 0 5px;
-    color: #777;
+/* ======= filter window ======= */
+#smoke {
+    display:none;
+    position:absolute;
+    top:-100px;
+    left:-100px;
+    opacity:0.05;
+    background-color:black;
+    z-index:9998;
 }
-.infoWindow {
-    line-height: 1.35;
-    overflow: hidden;
-    white-space: nowrap;
+#popup {
+    /*display:none;*/
+    width:240px;
+    height:300px;
+    background-color: #fff2e5;
+    position:absolute;
+    top:60px;
+    left:65%;
+    z-index:9999;
+    box-shadow: 6px 6px 5px #888888;
+    border-radius:2px;
+    /*border:1px solid #ddd;*/
+}
+#popup_bar {
+    width:100%;
+    background-color:#eee;
+    position:relative;
+    top:0;
+    border-radius: 6px 6px 0 0;
+    text-align:center;
+    height:24px;
+    cursor:move;
 }
 
-/* ======= filterNav ======= */
-#filterNav {
-    float: left;
-    width: 100%;
+
+/* ======= navtabs ======= */
+.tabs {
+    margin-bottom: 10px;
+    padding-bottom: 2px;
+    border-bottom: 1px solid #ddd;
+}
+.tab {
+    display: inline-block;
+    margin-left: -1px;
+    margin-bottom: -3px;
+    padding: 10px 15px;
+    width: 100px;
+    text-align: center;
+    border: 1px solid #ddd;
+    border-radius: 5px 5px 0 0;
+}
+.tab a {
+    display: block;
+    list-style: none;
+    text-decoration: none;
+	font-weight: 700;
+	font-size: 16px;
+    margin: 0;
+    color: #333;
+}
+.active-tab {
+    background-color: #eee;
     z-index: 9;
 }
-.category {
+
+/* ======= navbar ======= */
+#main-nav {
+    width: 100%;
+    float: left;
+}
+#main-nav ul {
     display: block;
-    float: left;
-    margin-bottom: 5px;
-    padding-left: 5px;
-    width: 100%;
-    height: 30px;
-    vertical-align: middle;
-    font: 14px Arial, Helvetica, sans-serif;
-    text-align: left;
-    background-color: #eee;
-}
-.label {
-    float: left;
-    margin-top: 12px;
-    text-align: right;
-    font: 12px Arial, Helvetica, sans-serif;
-    font-weight: bold;
-    color: rebeccapurple;
-    width: 8%;
-}
-.filterText {
-    margin: 0 5px 0 5px;
-    width: 100%;
-	text-decoration: none;
-    font-family: "HelveticaNeue","Helvetica Neue",Helvetica,Arial,sans-serif;
-	font-weight: 700;
-	font-size: 12px;
-    color: black;
-}
-#filterNav > div {
-    float: left;
-}
-#filterNav ul {
 	list-style: none;
 	position: relative;
-    display: inline-block;
-    margin-top: 5px;
-    margin-left: 10px;
+    width: 50%;
+	margin: 0;
+	padding: 0;
+    z-index: 999;
+}
+#main-nav ul a {
+	display: block;
+	color: #333;
+	text-decoration: none;
+	font-weight: 700;
+	font-size: 16px;
+    margin: 0;
+	padding: 10px 15px 32px 15px;
+	font-family: "HelveticaNeue","Helvetica Neue",Helvetica,Arial,sans-serif;
+}
+#main-nav ul li {
+	position: relative;
+    height: 48px;
+	margin: 0;
 	padding: 0;
 }
-#filterNav ul li {
-    position: relative;
-    display: inline-block;
-    float: left;
-    height: 16px;
-    margin: 1px;
-    padding: 2px 0;
-    font-size: 12px;
-    background-color: #ddd;
-    border: 2px solid #ccc;
-    -webkit-border-radius: 5px;
-    border-radius: 5px;
-}
-#filterNav ul li:hover {
-    background-color: #999;
-    border: 2px solid red;
-}
-#filterNav ul li:last-of-type {
-    background-color: #aaa;
-    border: 2px solid gray;
-}
-#filterNav ul #getData {
-    margin-left: 300px;
-    background-color: white;
-    border: 2px solid red;
-}
-#filterNav ul #Elem {
-    margin-left: 30px;
-}
-
-/*#filterNav ul li a {
-    margin: 16px 5px 0 5px;
-    width: 100%;
-	text-decoration: none;
-    font-family: "HelveticaNeue","Helvetica Neue",Helvetica,Arial,sans-serif;
-	font-weight: 700;
-	font-size: 12px;
-    color: black;
-}*/
-.activeFilter {
-    padding: 5px;
-}
-
-/* ======= profile ======= */
-.profileCol {
-    display: -webkit-box || -webkit-inline-box;
-    display: -moz-box || -moz-inline-box;
-    display: -ms-flexbox || -ms-inline-flexbox;
-    display: -webkit-flex || -webkit-inline-flex;
-    display: inline-flex;
-    flex-direction: -webkit-column;
-    justify-content: -webkit-flex-start;
-    align-items: -webkit-center;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
-    width: 80%;
-}
-.value {
+#main-nav ul li.activeFilter {
     text-align: left;
-    font: 12px Arial, Helvetica, sans-serif;
-    color: black;
-    width: 80%;
+    width: 180px;
 }
-#chartData {
+#main-nav ul li.activeFilter a {
+    /*float: left;*/
+}
+.clear {
+    margin: 12px 0 0 10px;
+}
+#main-nav ul li.geography-set {
+	background: #9999ff;
+}
+#main-nav ul li.levels-set {
+	background: #99c2ff;
+}
+#main-nav ul li.agency-set {
+	background: #d279d2;
+}
+#main-nav ul li.filter:hover {
+	background:#ffb366;
+}
+#main-nav ul li:hover {
+	background:#ffd9b3;
+}
+#main-nav ul ul {
+	display: none;
+	position: absolute;
+	top: 0;
+	left: 100%;
     width: 100%;
-    padding: 10px 0 0 0;
-    border: 1px solid Tomato;
+	background: #fff;
+	padding: 0;
+    background-color: rgba(200, 200, 200, 0.5);
+}
+#main-nav ul ul li {
+	float: none;
+}
+#main-nav ul ul a {
+    text-align: center;
+    /*width: 100%;*/
+	/*line-height: 120%;*/
+	/*padding: 10px 15px;*/
+    color: purple;
+}
+#main-nav ul ul ul {
+	top: 0;
+	left: 100%;
+}
+#main-nav ul li:hover > ul {
+	display: block;
 }
 
-/* ======= displays ======= */
-.displays {
-    width: 100px;
+/* ======= data ======= */
+/*#chartData {
+    margin-right: 20px;
     height: 100%;
-}
-.displayDivs > div {
-    margin: 10px;
-    padding: 8px 0 0 0;
-    width: 80px;
-    height: 30px;
-}
-#wards {
-    background-color: red;
-}
-#feeders {
-    background-color: green;
-}
-#public {
-    background-color: blue;
-}
-#charter {
-    background-color: purple;
-}
+    border: 1px solid Tomato;
+}*/
 
-/* ======= legend ======= */
-.legend {
-    line-height: 18px;
-    color: #555;
+
+
+/*.dropdown {
+    width: 160px;
+    margin-left: 20px;
 }
-.legend i {
-    width: 18px;
-    height: 18px;
-    float: left;
-    margin-right: 8px;
-    opacity: 0.7;
+.dropdown a {
+    width: 100%;
 }
+#geography {
+    width: 220px;
+    margin-left: -30px;
+    margin-right: 50px;
+}
+.dropdown > #years {
+    margin-left: 10px;
+}*/
+
+/* ======= dropdown ======= */
