--- a/css/style.css
+++ b/css/style.css
@@ -87,6 +87,7 @@ hr {
     float: left;
     width: 300px;
     height: 300px;
+    margin-top: 60px;
 }
 
 /* ======= labels ======= */
@@ -96,6 +97,36 @@ h3 {
 }
 .subtitle {
     margin-left: 10px;
+}
+
+/* ======= navtabs ======= */
+.tabs {
+    margin-bottom: 10px;
+    padding-bottom: 2px;
+    border-bottom: 1px solid #ddd;
+}
+.tab {
+    display: inline-block;
+    margin-left: -1px;
+    margin-bottom: -3px;
+    padding: 10px 15px;
+    width: 100px;
+    text-align: center;
+    border: 1px solid #ddd;
+    border-radius: 5px 5px 0 0;
+}
+.tab a {
+    display: block;
+    list-style: none;
+    text-decoration: none;
+	font-weight: 700;
+	font-size: 16px;
+    margin: 0;
+    color: #333;
+}
+.active-tab {
+    background-color: #eee;
+    z-index: 9;
 }
 
 /* ======= filter window ======= */
@@ -156,36 +187,6 @@ h3 {
     color: white;
 }
 
-
-/* ======= navtabs ======= */
-.tabs {
-    margin-bottom: 10px;
-    padding-bottom: 2px;
-    border-bottom: 1px solid #ddd;
-}
-.tab {
-    display: inline-block;
-    margin-left: -1px;
-    margin-bottom: -3px;
-    padding: 10px 15px;
-    width: 100px;
-    text-align: center;
-    border: 1px solid #ddd;
-    border-radius: 5px 5px 0 0;
-}
-.tab a {
-    display: block;
-    list-style: none;
-    text-decoration: none;
-	font-weight: 700;
-	font-size: 16px;
-    margin: 0;
-    color: #333;
-}
-.active-tab {
-    background-color: #eee;
-    z-index: 9;
-}
 
 /* ======= navbar ======= */
 #main-nav {
@@ -292,28 +293,112 @@ h3 {
 }
 
 /* ======= data ======= */
-/*#chartData {
-    margin-right: 20px;
-    height: 100%;
-    border: 1px solid Tomato;
-}*/
-
-
-
-/*.dropdown {
-    width: 160px;
-    margin-left: 20px;
+.schoolTitle {
+    height: 60px;
 }
-.dropdown a {
-    width: 100%;
+table, th, td {
+    padding: 5px;
+    font-size: 14px;
+    text-align: left;
+    border-bottom: 1px solid #ddd;
+    border-collapse: collapse;
 }
-#geography {
-    width: 220px;
-    margin-left: -30px;
-    margin-right: 50px;
+th {
+    height: 20px;
+    color: white;
+    background-color: firebrick;
 }
-.dropdown > #years {
-    margin-left: 10px;
-}*/
+tr {
+    height: 12px;
+}
+.data {
+    width: 150px;
+}
+.values {
+    width: 250px;
+}
+.select {
+    width: 50px;
+}
+tr:nth-child(even) {
+    background-color: #f2f2f2;
+}
+tr:hover {
+    background-color: #f5dddd;
+}
 
-/* ======= dropdown ======= */
+
+/* ======= squaredOne ======= */
+.squaredOne {
+	width: 24px;
+	height: 24px;
+	background: #fcfff4;
+
+	background: -webkit-linear-gradient(top, #fcfff4 0%, #dfe5d7 40%, #b3bead 100%);
+	background: -moz-linear-gradient(top, #fcfff4 0%, #dfe5d7 40%, #b3bead 100%);
+	background: -o-linear-gradient(top, #fcfff4 0%, #dfe5d7 40%, #b3bead 100%);
+	background: -ms-linear-gradient(top, #fcfff4 0%, #dfe5d7 40%, #b3bead 100%);
+	background: linear-gradient(top, #fcfff4 0%, #dfe5d7 40%, #b3bead 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fcfff4', endColorstr='#b3bead',GradientType=0 );
+	margin: 1px auto;
+	-webkit-box-shadow: inset 0px 1px 1px white, 0px 1px 3px rgba(0,0,0,0.5);
+	-moz-box-shadow: inset 0px 1px 1px white, 0px 1px 3px rgba(0,0,0,0.5);
+	box-shadow: inset 0px 1px 1px white, 0px 1px 3px rgba(0,0,0,0.5);
+	position: relative;
+}
+
+.squaredOne label {
+	cursor: pointer;
+	position: absolute;
+	width: 16px;
+	height: 16px;
+	left: 4px;
+	top: 4px;
+
+	-webkit-box-shadow: inset 0px 1px 1px rgba(0,0,0,0.5), 0px 1px 0px rgba(255,255,255,1);
+	-moz-box-shadow: inset 0px 1px 1px rgba(0,0,0,0.5), 0px 1px 0px rgba(255,255,255,1);
+	box-shadow: inset 0px 1px 1px rgba(0,0,0,0.5), 0px 1px 0px rgba(255,255,255,1);
+
+	background: -webkit-linear-gradient(top, #222 0%, #45484d 100%);
+	background: -moz-linear-gradient(top, #222 0%, #45484d 100%);
+	background: -o-linear-gradient(top, #222 0%, #45484d 100%);
+	background: -ms-linear-gradient(top, #222 0%, #45484d 100%);
+	background: linear-gradient(top, #222 0%, #45484d 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#222', endColorstr='#45484d',GradientType=0 );
+}
+
+.squaredOne label:after {
+	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+	filter: alpha(opacity=0);
+	opacity: 0;
+	content: '';
+	position: absolute;
+	width: 12px;
+	height: 12px;
+	background: #00bf00;
+
+	background: -webkit-linear-gradient(top, #00bf00 0%, #009400 100%);
+	background: -moz-linear-gradient(top, #00bf00 0%, #009400 100%);
+	background: -o-linear-gradient(top, #00bf00 0%, #009400 100%);
+	background: -ms-linear-gradient(top, #00bf00 0%, #009400 100%);
+	background: linear-gradient(top, #00bf00 0%, #009400 100%);
+
+	top: 2px;
+	left: 2px;
+
+	-webkit-box-shadow: inset 0px 1px 1px white, 0px 1px 3px rgba(0,0,0,0.5);
+	-moz-box-shadow: inset 0px 1px 1px white, 0px 1px 3px rgba(0,0,0,0.5);
+	box-shadow: inset 0px 1px 1px white, 0px 1px 3px rgba(0,0,0,0.5);
+}
+
+.squaredOne label:hover::after {
+	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=30)";
+	filter: alpha(opacity=30);
+	opacity: 0.3;
+}
+
+.squaredOne input[type=checkbox]:checked + label:after {
+	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
+	filter: alpha(opacity=100);
+	opacity: 1;
+}
