--- a/css/style.css
+++ b/css/style.css
@@ -39,27 +39,10 @@ hr {
 .col-md-11 { width: 91.66%; }
 .col-md-12 { width: 100%; }
 
-
 [class*="col-"] {
     background-color: #fff;
     /*border: 1px solid #ddd;
     border: 1px solid rgba(86,61,124,.2);*/
-}
-
-/* ======= tooltips ======= */
-#tooltips {
-    position: absolute;
-    height: 24px;
-    background-color: rgba(255, 255, 255, 1);
-    box-shadow: 2px 2px 2px #222;
-    border-radius:2px;
-    z-index: 999;
-}
-#tooltips p {
-    margin: 8px 20px 4px 20px;
-    line-height: 12px;
-    font-size: 12px;
-    font-weight: bold;
 }
 
 /* ======= mapCol ======= */
@@ -81,7 +64,7 @@ hr {
 /* ======= map ======= */
 #map {
     width: 100%;
-    height: 700px;
+    height: 600px;
 }
 #map2 {
     float: left;
@@ -140,12 +123,12 @@ h3 {
     z-index:9998;
 }
 #popup {
-    width:240px;
-    height:300px;
+    width:360px;
+    height:220px;
     background-color: #fff2e5;
     position:absolute;
     top:60px;
-    left:65%;
+    left:60%;
     z-index:9999;
     box-shadow: 6px 6px 5px #888888;
     border-radius: 6px 6px 2px 2px;
@@ -207,14 +190,14 @@ h3 {
 	color: #333;
 	text-decoration: none;
 	font-weight: 700;
-	font-size: 16px;
+	font-size: 14px;
     margin: 0;
-	padding: 10px 15px 32px 15px;
+	padding: 8px 10px 8px 10px;
 	font-family: "HelveticaNeue","Helvetica Neue",Helvetica,Arial,sans-serif;
 }
 #main-nav ul li {
 	position: relative;
-    height: 48px;
+    height: 36px;
 	margin: 0;
 	padding: 0;
 }
@@ -227,6 +210,41 @@ h3 {
 }
 .clear {
     margin: 12px 0 0 10px;
+}
+#main-nav ul li.filter:hover {
+	background:#ffb366;
+}
+#main-nav ul li:hover {
+	background:#ffd9b3;
+}
+#main-nav ul ul {
+	display: none;
+	position: absolute;
+	top: 0;
+	left: 100%;
+    width: 100%;
+	background: #fff;
+	padding: 0;
+    background-color: rgba(200, 200, 200, 0.5);
+}
+#main-nav ul ul li {
+	float: none;
+    border-bottom: 1px solid purple;
+}
+#main-nav ul ul a {
+    text-align: center;
+    margin: 0;
+    padding: 6px 0;
+    font-weight: 700;
+	font-size: 14px;
+    color: purple;
+}
+#main-nav ul ul ul {
+	top: 0;
+	left: 100%;
+}
+#main-nav ul li:hover > ul {
+	display: block;
 }
 #main-nav ul li.geography-set {
 	background: #9999ff;
@@ -258,38 +276,21 @@ h3 {
 #main-nav ul li #expenditures > a {
 	color: #33cc33;
 }
-#main-nav ul li.filter:hover {
-	background:#ffb366;
+
+/* ======= tooltips ======= */
+#tooltips {
+    position: absolute;
+    height: 24px;
+    background-color: rgba(255, 255, 255, 1);
+    box-shadow: 2px 2px 2px #222;
+    border-radius:2px;
+    z-index: 999;
 }
-#main-nav ul li:hover {
-	background:#ffd9b3;
-}
-#main-nav ul ul {
-	display: none;
-	position: absolute;
-	top: 0;
-	left: 100%;
-    width: 100%;
-	background: #fff;
-	padding: 0;
-    background-color: rgba(200, 200, 200, 0.5);
-}
-#main-nav ul ul li {
-	float: none;
-}
-#main-nav ul ul a {
-    text-align: center;
-    /*width: 100%;*/
-	/*line-height: 120%;*/
-	/*padding: 10px 15px;*/
-    color: purple;
-}
-#main-nav ul ul ul {
-	top: 0;
-	left: 100%;
-}
-#main-nav ul li:hover > ul {
-	display: block;
+#tooltips p {
+    margin: 8px 20px 4px 20px;
+    line-height: 12px;
+    font-size: 12px;
+    font-weight: bold;
 }
 
 /* ======= data ======= */
