--- a/css/style.css
+++ b/css/style.css
@@ -169,6 +169,11 @@ h3 {
 	font-size: 16px;
     color: white;
 }
+hr {
+    padding: 0;
+    margin: 0;
+    width: 200%;
+}
 
 
 /* ======= navbar ======= */
