--- a/css/style.css
+++ b/css/style.css
@@ -125,6 +125,45 @@ h3 {
     background-color: rgba(255, 255, 255, 0.9);
     z-index:99;
 }
+#mapLegend {
+    display:none;
+    width:200px;
+    height:auto;
+    position:absolute;
+    top:300px;
+    left:80%;
+    box-shadow: 6px 6px 5px #888888;
+    border-radius: 6px 6px 2px 2px;
+    background-color: rgba(255, 255, 255, 0.9);
+    z-index:99;
+}
+#legend > th {
+    height: 20px;
+    color: white;
+    background-color: firebrick;
+}
+#legend > tr {
+    height: 12px;
+}
+.minMaxCol {
+    width: 70%;
+    height: 12px;
+}
+.colorChipCol {
+    width: 30%;
+    height: 12px;
+}
+.minMax {
+    text-align: left;
+    font-weight: 400;
+	font-size: 12px;
+    color: purple;
+}
+.colorChip {
+    margin: 1px 10px;
+    width: 60px;
+    height: 20px;
+}
 
 /* ======= filter window ======= */
 #smoke {
@@ -316,19 +355,19 @@ hr {
 .schoolTitle {
     height: 60px;
 }
-table, th, td {
+/*#profile {
     padding: 5px;
     font-size: 14px;
     text-align: left;
     border-bottom: 1px solid #ddd;
     border-collapse: collapse;
 }
-th {
+#profile > th {
     height: 20px;
     color: white;
     background-color: firebrick;
 }
-tr {
+#profile > tr {
     height: 12px;
 }
 .data {
@@ -340,12 +379,12 @@ tr {
 .select {
     width: 50px;
 }
-tr:nth-child(even) {
+#profile > tr:nth-child(even) {
     background-color: #f2f2f2;
 }
-tr:hover {
+#profile > tr:hover {
     background-color: #f5dddd;
-}
+}*/
 
 
 /* ======= squaredOne ======= */
