--- a/css/style.css
+++ b/css/style.css
@@ -347,36 +347,6 @@ hr {
     color: purple;
 }
 
-/* ======= navtabs ======= */
-/*.tabs {
-    margin-bottom: 10px;
-    padding-bottom: 2px;
-    border-bottom: 1px solid #ddd;
-}
-.tab {
-    display: inline-block;
-    margin-left: -1px;
-    margin-bottom: -3px;
-    padding: 10px 15px;
-    width: 100px;
-    text-align: center;
-    border: 1px solid #ddd;
-    border-radius: 5px 5px 0 0;
-}
-.tab a {
-    display: block;
-    list-style: none;
-    text-decoration: none;
-	font-weight: 700;
-	font-size: 16px;
-    margin: 0;
-    color: #333;
-}
-.active-tab {
-    background-color: #eee;
-    z-index: 9;
-}*/
-
 /* ======= legend ======= */
 /*#chart {
     display:none;
@@ -463,7 +433,7 @@ hr {
 #profile > tr:nth-child(even) {
     background-color: #f2f2f2
 }
-#profile > .data-key, .data-value {
+.data-key, .data-value {
     position: relative;
     padding: -10px 0;
     margin: -10px 0;
@@ -471,14 +441,14 @@ hr {
     vertical-align: center;
     border-bottom: 1px solid #ddd;
 }
-#profile > .data-key {
+.data-key {
     width: 100px;
 }
-#profile > .data-value {
+.data-value {
     width: 260px;
 }
 
-#profile > .key-text {
+.key-text {
     position: relative;
     margin-left: 0 0 0 10px;;
     padding: 1px 0;
@@ -488,20 +458,20 @@ hr {
 	font-size: 14px;
     color: black;
 }
-#profile > .value-text {
+.value-text {
     padding: 1px 0;
     margin: 1px 10px;
     font-size: 14px;
     color: purple;
 }
-#profile > .schoolname {
+.schoolname {
     width: 100%;
     height: 20px;
     text-align: center;
     color: white;
     background-color: firebrick;
 }
-#profile > .schoolname > p {
+.schoolname > p {
     color: white;
 }
 
