--- a/css/style.css
+++ b/css/style.css
@@ -353,7 +353,8 @@ hr {
 #chart {
     position: relative;
     width: 100%;
-    height: : 100%;
+    height: 100%;
+    background-color: rgba(200, 200, 200, 0.5);
 }
 
 /* ======= mouseover ======= */
