--- a/css/style.css
+++ b/css/style.css
@@ -191,6 +191,11 @@ hr {
     text-align: right;
     color: red;
 }
+/*.all-filters {
+    display: inline-block;;
+    margin-left: 20px;
+    color: red;
+}*/
 #main-nav {
     width: 100%;
     float: left;
@@ -222,6 +227,17 @@ hr {
 	font-size: 14px;
     color: #333;
 	font-family: "HelveticaNeue","Helvetica Neue",Helvetica,Arial,sans-serif;
+}
+#main-nav > .nav-list .all-filters {
+    position: absolute;
+    width: 100%;
+    height: 36px;
+	margin-top: 10px;
+    margin-left: 40px;
+	padding: 0;
+    font-size: 14px;
+    text-align: center;
+    color: gray;
 }
 #main-nav > .nav-list ul {
 	display: none;
