--- a/css/style.css
+++ b/css/style.css
@@ -102,7 +102,7 @@ hr {
     position: absolute;
     top: 57px;
     left: 65%;
-    background-color: #white;
+    background-color: white;
     box-shadow: 4px 4px 4px #555;
     border-radius: 6px 6px 2px 2px;
     z-index:99;
@@ -291,7 +291,7 @@ td > .filter {
     flex-direction: -webkit-column;
     flex-direction: column;
     justify-content: -webkit-flex-start;
-    justify-content: flex-start;;
+    justify-content: flex-start;
     align-items: -webkit-flex-start;
     align-items: flex-start;
 }
@@ -311,7 +311,7 @@ td > .filter {
 
 /* ======= navbar ======= */
 /*.labelText {
-    display: inline-block;;
+    display: inline-block;
     width: 30%;
 	margin-left: 10px;
 	padding: 0;
@@ -339,7 +339,7 @@ td > .filter {
 	padding: 0;
 }
 #main-nav > .nav-list a {
-    display: inline-block;;
+    display: inline-block;
     width: 48%;
     margin: 0;
 	padding: 8px 10px 8px 10px;
@@ -378,7 +378,7 @@ td > .filter {
     border-bottom: 1px solid purple;
 }
 #main-nav > .nav-list ul a {
-    display: inline-block;;
+    display: inline-block;
     width: 200%;
     margin: 0;
     text-align: left;
@@ -451,7 +451,7 @@ hr {
     width: 15%;
 }
 #searchWindow {
-    display: inline-block;;
+    display: inline-block;
     position: relative;
     width: 75%;
     height: 20px;
@@ -462,7 +462,7 @@ hr {
     z-index: 99;
 }
 #searchButton {
-    display: inline-block;;
+    display: inline-block;
     position: relative;
     width: 50px;
     height: 30px;
@@ -482,7 +482,7 @@ hr {
     display: block;
     padding: 10px;
     font-size: 16px;
-    text-align: center;;
+    text-align: center;
     color: purple;
 }
 
@@ -724,7 +724,7 @@ hr {
     background-color: gray;
 }
 #sub-nav-container > .sub-nav-list a {
-    display: inline-block;;
+    display: inline-block;
     width: 100%;
     height: 100%;
     margin: 0;
@@ -834,7 +834,7 @@ label {
     padding: 1px 0;
     margin: 1px 2px;
     padding: 0;
-    text-align: center;;
+    text-align: center;
     font-weight: 400;
 	font-size: 12px;
     color: purple;
@@ -887,7 +887,7 @@ label {
     background: #ddd9b3;
 }
 #page-nav > .nav-list a {
-    display: inline-block;;
+    display: inline-block;
     width: 100%;
     margin: 0;
 	padding-top: 8px;
@@ -948,7 +948,7 @@ label {
     padding: 1px 0;
     margin: 1px 2px;
     padding: 0;
-    text-align: center;;
+    text-align: center;
     font-weight: 400;
 	font-size: 12px;
     color: purple;
